<resources>
    <string name="app_name">Final Capstone</string>
    <string name="register_here_tv">Don\'t have an account?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_here"><u> Register here</u></string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="what_are_you_n_feeling_today">What are you \n\t\t feeling today?</string>
    <string name="greetings">%1$s, %2$s \n\n\t\t\t\tWhat are you feeling today?</string>
    <string name="mood_reason">Why are you feeling like this</string>
    <string name="your_note">\t your note..</string>
    <string name="calender">Calender</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="moods_list">Moods List</string>
    <string name="note">Note:</string>
    <string name="you">(you)</string>
    <string name="private_pic">Private</string>
    <string name="public_pic">Public</string>
    <string name="profile">Profile</string>
    <string name="public_moods">Public Moods</string>
    <string name="private_moods">Private Moods</string>
    <string name="map_id" translatable="false">68eeeeecfcb51a99</string>
    <string name="chat">Chat</string>
    <string name="moods_chart">Moods Chart</string>
    <string name="explore_other_moods">Explore other moods</string>
    <string name="my_moods">My moods</string>
    <string name="input" translatable="false">Input</string>
    <string name="show_my_moods">Show My Moods</string>
    <string name="hide_my_moods">Hide My Moods</string>
    <string name="img_not_uploaded">Your image isn\'t uploaded yet</string>
    <string name="fine">That\'s fine</string>
    <string name="wait">Wait</string>
    <string name="no_mood">You didn\'t log in a mood today, would you like to log it in or continue with your latest one?</string>
    <string name="continue_">Continue</string>
    <string name="log_it">Log it in</string>
    <string name="plz_name">Please enter a name</string>
    <string name="plz_email">Please enter an email</string>
    <string name="plz_pass">Please enter a password</string>
    <string name="plz_match">Please enter a matching password</string>
    <string name="oops">an error occurred</string>
    <string name="morning">Good morning</string>
    <string name="evening">Good afternoon</string>
    <string name="afternoon">Good evening</string>

</resources>