<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_unselectedColor="#FFFFFF">

    <item
        android:id="@+id/listFragment2"
        android:icon="@drawable/ic_baseline_list_24"
        android:enabled="true"
        android:title="@string/list"
        app:cnb_iconColor="#3D83BC"
        />

    <item
        android:id="@+id/chatFragment2"
        android:title="@string/chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_chat_24"
        app:cnb_iconColor="#3D83BC"
        />

    <item
        android:id="@+id/profileFragment2"
        android:icon="@drawable/ic_baseline_person_outline_24"
        android:title="@string/profile"
        app:cnb_iconColor="#3D83BC"
        />
</menu>