<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.moodDetailsFragment.MoodDetailsFragment"
    android:id="@+id/constraint_layout2">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:max="100"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/mood_reason"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/selected_mood_iv"
        android:layout_width="98dp"
        android:layout_height="85dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <TextView
        android:id="@+id/note_boundary"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_mood_iv" />

    <EditText
        android:id="@+id/note_et"
        android:layout_width="270dp"
        android:layout_height="170dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/your_note"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selected_mood_iv" />

    <ImageButton
        android:id="@+id/add_mood"
        android:layout_width="38dp"
        android:layout_height="32dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/ic_baseline_post_add_24"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relative_layout1"
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30sp"
        app:layout_constraintBottom_toTopOf="@id/add_mood"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/note_boundary"
        app:layout_constraintVertical_bias="0.214">

        <ImageButton
            android:id="@+id/take_pic_btn"
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:background="@drawable/ic_baseline_add_a_photo_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/pic_image_view"
            android:layout_width="140sp"
            android:layout_height="140sp"
            android:background="@drawable/rect"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39sp"
        app:layout_constraintStart_toEndOf="@id/relative_layout1"
        app:layout_constraintTop_toBottomOf="@id/note_boundary">

        <ImageButton
            android:layout_width="50sp"
            android:layout_height="50sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="@drawable/ic_baseline_add_reaction_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/meme_picker_iv"
            android:layout_width="140sp"
            android:layout_height="140sp"
            android:background="@drawable/rect"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/pic_switch"
        android:layout_width="52dp"
        android:layout_height="31dp"
        android:layout_marginStart="96dp"
        android:layout_marginBottom="292dp"
        android:textOff="@string/public_pic"
        android:textOn="@string/private_pic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/location_btn"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/ic_baseline_map_24"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lat_lang_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/location_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>